# UX-Manager-backlogs

./: .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
apps/accounts/: adapters.py  admin.py  forms.py  models.py  validators.py
apps/accounts/migrations/: 0001_initial.py
apps/accounts/templatetags/: form_extras.py
apps/feedback/: admin.py  apps.py  models.py  views.py
apps/feedback/migrations/: 0001_initial.py
templates/: ayuda.html  base.html  calificaciones.html  home.html  ranking.html
templates/account/: base_account.html  login.html  signup.html
templates/socialaccount/: login_cancelled.html
tests/: test_accounts.py  test_bootstrap.py
uxmanager/: __init__.py  asgi.py  company_data.py  settings.py  urls.py  views.py  wsgi.py
