[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py312"]


[tool.isort]
profile = "black"
line_length = 100

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
strict_equality = true
pretty = true
show_error_codes = true
exclude = [".venv", "static", "migrations"]

[[tool.mypy.overrides]]
module = ["apps.*"]
strict = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "uxmanager.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "-q --disable-warnings"
filterwarnings = [
  "ignore::DeprecationWarning",
]
